# Zadanie_Rekrutacyjne

./: CMakeLists.txt
Include/: directory_traverser.h  file.h  job.h  program.h  result_container.h  threads_pool.h
my_build/test_folder/: 1.txt  4.txt
my_build/test_folder/folder1/: 2.txt
my_build/test_folder/folder1/folder2/: 3.txt
my_build/test_folder1/: example.txt
src/: directory_traverser.cpp  file.cpp  main.cpp  program.cpp  result_container.cpp  threads_pool.cpp
tests/: directory_traverser_tests.cpp  file_tests.cpp  result_container_tests.cpp  threads_pool_tests.cpp
